Finished the basic markup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
   </head>
 
   <body>
-
+    <main class="container">
+      <div class="img-container">
+        <img class="main-img" src="images/illustration-hero.svg"
+          alt="image of a dancing lady listening to music on her headphones which are connected to the phone">
+      </div>
+      <div class="body-container">
+        <h1 class="body-title">Order Summary</h1>
+        <p class="body-text">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere
+          you like!</p>
+        <div class="body-plan">
+          <img class="plan-icon" src="images/icon-music.svg" alt="icon of a music note">
+          <h2 class="plan-title">Annual Plan</h2>
+          <p class="plan-price">$59.99/year</p>
+          <a href="anothersite.html">Change</a>
+        </div>
+        <button class="btn-proceed">Proceed to Payment</button>
+        <button class="btn-cancel">Cancel Order</button>
+      </div>
+    </main>
   </body>
 
 </html>
