Finished mobile design

--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
           you like!</p>
         <div class="body-plan">
           <img class="plan-icon" src="images/icon-music.svg" alt="icon of a music note">
-          <h2 class="plan-title">Annual Plan</h2>
-          <p class="plan-price">$59.99/year</p>
-          <a href="anothersite.html">Change</a>
+          <div class="title-price">
+            <h2 class="plan-title">Annual Plan</h2>
+            <p class="plan-price">$59.99/year</p>
+          </div>
+          <a class="plan-link" href="anothersite.html">Change</a>
         </div>
-        <button class="btn-proceed">Proceed to Payment</button>
-        <button class="btn-cancel">Cancel Order</button>
+        <div class="btns">
+          <button class="btn-proceed">Proceed to Payment</button>
+          <button class="btn-cancel">Cancel Order</button>
+        </div>
       </div>
     </main>
   </body>
